sudoku paso2 terminado

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body onload="start()">
     <h1>SUDOKU</h1>
+    <div id="error">Errores: <class id="digiterror">0</class></div>
     <div id="results"></div>
     <div id="numbers"></div>
 </body>
